Code Reformatted and optimized

--- a/app/src/main/res/layout/activity_chose_blacklist.xml
+++ b/app/src/main/res/layout/activity_chose_blacklist.xml
@@ -10,16 +10,16 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            tools:listitem="@layout/row_contact"
             android:id="@+id/contact_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            tools:listitem="@layout/row_contact" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
     </FrameLayout>
 
