--- a/app/src/main/res/drawable/empty_circle.xml
+++ b/app/src/main/res/drawable/empty_circle.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="oval"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
     <stroke
         android:width="2dp"
-        android:color="@color/colorPrimaryDark"/>
-    <size android:height="32dp" android:width="32dp"/>
+        android:color="@color/colorPrimaryDark" />
+    <size
+        android:width="32dp"
+        android:height="32dp" />
 
 </shape>
