--- a/app/src/main/res/layout/activity_show_blacklist.xml
+++ b/app/src/main/res/layout/activity_show_blacklist.xml
@@ -2,48 +2,48 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/parent_layout"
     android:background="@color/darkWhite"
     tools:context="codeview.apps.dndcallblocker.view.activity.ShowBlacklistActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
         <android.support.v7.widget.CardView
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            app:cardBackgroundColor="@color/colorWhite"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            app:cardBackgroundColor="@color/colorWhite">
 
             <LinearLayout
-                android:layout_gravity="center"
-                android:paddingStart="@dimen/margin_std"
-                android:paddingEnd="@dimen/margin_std"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/margin_std"
+                android:paddingTop="10dp"
+                android:paddingEnd="@dimen/margin_std"
+                android:paddingBottom="10dp">
 
                 <TextView
-                    android:textSize="18sp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/block_all_incoming_calls_sms"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:textSize="18sp" />
 
                 <Switch
                     android:id="@+id/block_all"
-                    android:theme="@style/SwitchTheme"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:theme="@style/SwitchTheme" />
 
             </LinearLayout>
 
@@ -54,57 +54,54 @@
             android:layout_height="match_parent">
 
             <View
-                android:visibility="gone"
                 android:id="@+id/blacklist_filter"
-                android:background="@color/colorRipple"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:background="@color/colorRipple"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
-                tools:listitem="@layout/row_blacklist"
-                android:visibility="visible"
                 android:id="@+id/blacklist_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                tools:listitem="@layout/row_blacklist" />
 
             <TextView
-                android:visibility="gone"
                 android:id="@+id/no_blacklist_placeholder"
-                android:layout_margin="@dimen/margin_std"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:fontFamily="@font/barlow_semibold"
-                android:text="No blacklisted numbers to show"
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_std"
+                android:fontFamily="@font/barlow_semibold"
+                android:gravity="center"
+                android:text="No blacklisted numbers to show"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <View
-                android:visibility="gone"
                 android:id="@+id/disable_layer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:alpha="0.4"
                 android:background="@color/veryLightGray"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:visibility="gone" />
 
         </FrameLayout>
-
-
 
 
     </LinearLayout>
 
 
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_blacklist_fab"
         style="@style/FabStyle"
-        app:fabSize="normal"
-        android:src="@drawable/add_icon_fab"
-        android:layout_margin="24dp"
-        android:layout_gravity="end|bottom"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="24dp"
+        android:src="@drawable/add_icon_fab"
+        app:fabSize="normal" />
 
 
 </android.support.design.widget.CoordinatorLayout>
