--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        app:showAsAction="always"
         android:id="@+id/save"
-        android:title="@string/save"/>
+        android:title="@string/save"
+        app:showAsAction="always" />
 
 </menu>
