--- a/app/src/main/res/layout/activity_show_blacklist.xml
+++ b/app/src/main/res/layout/activity_show_blacklist.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,7 +74,7 @@
                 android:layout_margin="@dimen/margin_std"
                 android:fontFamily="@font/barlow_semibold"
                 android:gravity="center"
-                android:text="No blacklisted numbers to show"
+                tools:text="No blacklisted numbers to show"
                 android:textSize="18sp"
                 android:visibility="gone" />
 
