--- a/app/src/main/res/layout/row_call_log.xml
+++ b/app/src/main/res/layout/row_call_log.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="15dp"
     android:paddingLeft="15dp"
     android:paddingTop="7dp"
@@ -20,7 +21,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:orientation="vertical"
-        android:text="1.    Call blocked from +91-7988316536"
+        tools:text="1. Call blocked from +91-7988316536"
         android:textSize="@dimen/large_text" />
 
     <TextView
