--- a/app/src/main/res/layout/seperator_light.xml
+++ b/app/src/main/res/layout/seperator_light.xml
@@ -3,4 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="0.5dp"
     android:background="@color/veryLightGray"
-    android:orientation="vertical"></View>
+    android:orientation="vertical"/>
